[package]
name = "micro-service"
version = "0.1.0"
authors = ["Dylan Maccora <maccora17@gmail.com>"]

[dependencies]
# Gotham dependencies
# gotham = "0.2"
# hyper = "0.11"
# futures = "0.1"
# mime = "0.3"
# Rocket dependencies
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
dotenv = "0.11"
[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]